# safe_event

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: dispatcher.h  event.h  safe_event  typed_map.h
src/: dispatcher.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
